@@ -44,7 +44,7 @@
 
 			.node-children > tbody > tr > td
 			{
-				border: 1px solid #ccc;
+				outline: 1px solid #ccc;
 				vertical-align: top;
 			}
 
